--- a/nice/templates/navbar.html
+++ b/nice/templates/navbar.html
@@ -9,7 +9,7 @@
                     <div class="logo"><a href="{% url 'home2' %}">Capricon</a></div>
                     <nav class="main_nav">
                         <ul>
-                            <li class="active"><a href="{% url 'home2' %}">Home</a></li>
+                            <li class="active"><a href="{% url 'home' %}">Home</a></li>
                             {% for cat in category_main %}
                             <li><a href="{% url 'category_detail' pk=cat.id %}">{{ cat.title }}</a>
                             </li>
@@ -66,7 +66,7 @@
     </div>
     <nav class="menu_nav">
         <ul class="menu_mm">
-            <li class="menu_mm"><a href="{% url 'home2' %}">home</a></li>
+            <li class="menu_mm"><a href="{% url 'home' %}">home</a></li>
             {% for cat in category_main %}
             <li><a href="{% url 'category_detail' pk=cat.id %}">{{ cat.title }}</a>
             </li>
