--- a/nice/templates/navbar.html
+++ b/nice/templates/navbar.html
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col">
                 <div class="header_content d-flex flex-row align-items-center justify-content-start">
-                    <div class="logo"><a href="{% url 'home2' %}">Capricon</a></div>
+                    <div class="logo"><a href="{% url 'home' %}">Capricon</a></div>
                     <nav class="main_nav">
                         <ul>
                             <li class="active"><a href="{% url 'home' %}">Home</a></li>
