--- a/nice/templates/nice/post_list.html
+++ b/nice/templates/nice/post_list.html
@@ -12,20 +12,24 @@
 
             <!-- Slider Item -->
             <div class="owl-item">
-                <div class="home_slider_background" style="background-image:url({% static 'images/home_slider.jpg' %})">
+                {% for test in post_list_main %}
+                <div class="home_slider_background" style="background-image:url({{test.thumbnail.url}}); opacity: 0.5;">
                 </div>
+                {% endfor %}
                 <div class="home_slider_content_container">
                     <div class="container">
                         <div class="row">
                             <div class="col">
                                 {% for post in post_list_main %}
                                 <div class="home_slider_content">
-                                    <div class="home_slider_item_category trans_200"><a href="category.html"
-                                            class="trans_200">
-                                            {% for cat in post.categories.all %}
+                                    {% for cat in post.categories.all %}
+                                    <div class="home_slider_item_category trans_200"><a
+                                            href="{% url 'category_detail' pk=cat.id %}" class="trans_200">
+
                                             {{ cat }}
-                                            {% endfor %}
+
                                         </a></div>
+                                    {% endfor %}
                                     <div class="home_slider_item_title">
                                         <a href="{% url 'buzz' pk=post.id%}">{{post.title}}</a>
                                     </div>
@@ -127,7 +131,7 @@
                                         </div>
                                         <p class="card-text">{{post.content|slice:"300"|safe}}</p>
                                         <small class="post_meta"><a
-                                                href="{% url 'buzz' pk=post.id%}">{{post.author}}</a><span>{{post.created_on|timesince}}
+                                                href="{% url 'profile' pk=post.author.id%}">{{post.author}}</a><span>{{post.created_on|timesince}}
                                                 ago</span><span><i class="fa fa-eye" aria-hidden="true"></i>
                                                 {{post.view_count}}</span><span><i class="fa fa-comment-o"
                                                     aria-hidden="true"></i> {{post.comment_count}}</span></small>
@@ -144,7 +148,7 @@
                                                 href="{% url 'buzz' pk=post.id%}">{{post.title|slice:":200"|safe}}</a>
                                         </div>
                                         <small class="post_meta"><a
-                                                href="{% url 'buzz' pk=post.id%}">{{ post.author }}</a><span>{{ post.created_on}}</span><span><i
+                                                href="{% url 'profile' pk=post.author.id%}">{{ post.author }}</a><span>{{ post.created_on}}</span><span><i
                                                     class="fa fa-eye" aria-hidden="true"></i>
                                                 {{post.view_count}}</span><span><i class="fa fa-comment-o"
                                                     aria-hidden="true"></i> {{post.comment_count}}</span></small>
@@ -158,7 +162,7 @@
                                                 href="{% url 'buzz' pk=post.id%}">{{post.title|slice:"200"|safe}}</a>
                                         </div>
                                         <small class="post_meta"><a
-                                                href="#">{{post.author}}</a><span>{{post.created_on|timesince}}
+                                                href="{% url 'profile' pk=post.author.id%}">{{post.author}}</a><span>{{post.created_on|timesince}}
                                                 ago</span><span><i class="fa fa-eye" aria-hidden="true"></i>
                                                 {{post.view_count}}</span><span><i class="fa fa-comment-o"
                                                     aria-hidden="true"></i> {{post.comment_count}}</span></small>
@@ -190,7 +194,7 @@
                                                 href="{% url 'buzz' pk=post.id%}">{{post.title|slice:"50"|safe}}</a>
                                         </div>
                                         <small class="post_meta"><a
-                                                href="#">{{post.author}}</a><span>{{post.created_on|timesince}}
+                                                href="{% url 'profile' pk=post.author.id%}">{{post.author}}</a><span>{{post.created_on|timesince}}
                                                 ago</span><span><i class="fa fa-eye" aria-hidden="true"></i>
                                                 {{post.view_count}}</span><span><i class="fa fa-comment-o"
                                                     aria-hidden="true"></i> {{post.comment_count}}</span></small>
@@ -204,7 +208,7 @@
                                                 href="{% url 'buzz' pk=post.id%}">{{post.title|slice:"200"|safe}}</a>
                                         </div>
                                         <small class="post_meta"><a
-                                                href="#">{{post.author}}</a><span>{{post.created_on|timesince}}
+                                                href="{% url 'profile' pk=post.author.id%}">{{post.author}}</a><span>{{post.created_on|timesince}}
                                                 ago</span><span><i class="fa fa-eye" aria-hidden="true"></i>
                                                 {{post.view_count}}</span><span><i class="fa fa-comment-o"
                                                     aria-hidden="true"></i> {{post.comment_count}}</span></small>
@@ -238,7 +242,7 @@
                                                 href="{% url 'buzz' pk=post.id%}">{{post.title|slice:"50"|safe}}</a>
                                         </div>
                                         <small class="post_meta"><a
-                                                href="#">{{post.author}}</a><span>{{post.created_on|timesince}}
+                                                href="{% url 'profile' pk=post.author.id%}">{{post.author}}</a><span>{{post.created_on|timesince}}
                                                 ago</span><span><i class="fa fa-eye" aria-hidden="true"></i>
                                                 {{post.view_count}}</span><span><i class="fa fa-comment-o"
                                                     aria-hidden="true"></i> {{post.comment_count}}</span></small>
@@ -254,7 +258,7 @@
                                                 href="{% url 'buzz' pk=post.id%}">{{post.title|slice:"200"|safe}}</a>
                                         </div>
                                         <small class="post_meta"><a
-                                                href="#">{{post.author}}</a><span>{{post.created_on|timesince}}
+                                                href="{% url 'profile' pk=post.author.id%}">{{post.author}}</a><span>{{post.created_on|timesince}}
                                                 ago</span><span><i class="fa fa-eye" aria-hidden="true"></i>
                                                 {{post.view_count}}</span><span><i class="fa fa-comment-o"
                                                     aria-hidden="true"></i> {{post.comment_count}}</span></small>
