--- a/nice/templates/nice/categories.html
+++ b/nice/templates/nice/categories.html
@@ -5,7 +5,7 @@
 <div class="home">
 	<div class="home_background parallax-window" data-parallax="scroll" data-image-src="{{category.thumbnail.url}}"
 		data-speed="0.8"></div>
-	<div class="home_content card" style="opacity: 0.5; width: 300px;">
+	<div class="home_content card" style="opacity: 0.5;">
 		<div class="post_title" style="color: teal;">{{category}}</div>
 	</div>
 </div>
